# sentiment_analysis

./: .gitignore  README.md  bag_of_words.ipynb  pyproject.toml  sentiment_analysis.ipynb
.ipynb_checkpoints/: sentiment_analysis-checkpoint.ipynb
notebook/: bag_of_words.ipynb  logistic_regression_model.ipynb  sentence_level_token.ipynb  stemming_and_lemmatizing.ipynb
