[tool.poetry]
name = "sentiment analysis"
version = "0.1.0"
description = ""
authors = ["Ryan Slipe <rslipe@my.gcu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.1"
nltk = "^3.9.1"
scikit-learn = "^1.6.1"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
afinn = "^0.1"
textblob = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
